[gd_scene load_steps=3 format=3 uid="uid://c1pstmk3bsdv8"]

[ext_resource type="Script" path="res://scenes/titlescreen/titlescreen.gd" id="1_vrurj"]
[ext_resource type="FontFile" uid="uid://bhvepy8hqrp7p" path="res://fonts/normal/normal.png" id="2_grua3"]

[node name="Titlescreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vrurj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_grua3")
text = "HOST GAME"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_grua3")
text = "JOIN GAME"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 56.0
offset_right = 50.0
offset_bottom = 68.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_grua3")
text = "PARTY GAME"
horizontal_alignment = 1

[node name="MessagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -145.5
offset_right = 218.0
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219501, 0.219501, 0.219501, 1)

[node name="Label" type="Label" parent="MessagePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 126.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_grua3")
text = "THIS IS A MESSAGE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseMessagePanelButton" type="Button" parent="MessagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -40.0
offset_right = 29.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_grua3")
text = "CLOSE"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MessagePanel/CloseMessagePanelButton" to="." method="_on_close_message_panel_button_pressed"]
